--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
       container.appendChild(allButton);
 
       // Category buttons
-      const categoryOrder = ['research', 'package', 'media', 'projects'];
+      const categoryOrder = ['featured', 'research', 'package', 'media', 'projects'];
       categoryOrder.forEach(categoryKey => {
         const data = categories[categoryKey];
         const button = document.createElement('button');
