--- a/archive.html
+++ b/archive.html
@@ -285,11 +285,12 @@
       <nav class="main-nav">
         <ul>
           <li><a href="index.html">Home</a></li>
+          <li><a href="archive.html">All Posts</a></li>
+          <li><a href="archive.html?filter=featured">⭐ Featured</a></li>
           <li><a href="archive.html?filter=research">🔬 Research</a></li>
           <li><a href="archive.html?filter=package">🌀 Python Package</a></li>
           <li><a href="archive.html?filter=media">🎙️ Talks & Media</a></li>
           <li><a href="archive.html?filter=projects">💻 Tools & Projects</a></li>
-          <li><a href="archive.html">All Posts</a></li>
         </ul>
       </nav>
     </div>
