--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
       <h1 class="hero-title">UnravelSports</h1>
       <p class="hero-subtitle">Sports Data Analytics Research & Engineering Consultancy</p>
       <p class="hero-description">
-        UnravelSports is an independent sports data analytics consultancy founded by Joris Bekkers, specializing in analytics research, technical consulting, strategic consulting, and software engineering. I work with sports organizations, startups, and data providers to develop advanced analytical solutions and production-ready software. With nearly 10 years of experience in cutting-edge football analytics, I specialize in on-ball event data, positional tracking data, and skeletal tracking data. Beyond client work, I advocate for open-source sports analytics as a co-founder of PySport, by maintaining the 𝚞𝚗𝚛𝚊𝚟𝚎𝚕𝚜𝚙𝚘𝚛𝚝𝚜 Python package and contributing to 𝚔𝚕𝚘𝚙𝚙𝚢.
+        UnravelSports is an independent sports data analytics consultancy founded by Joris Bekkers, specializing in analytics research, technical consulting, strategic consulting, and software engineering. I have nearly 10 years of experience in cutting-edge football analytics working with on-ball event data, positional tracking data, and skeletal tracking data. I consult for sports organizations, startups, and data providers to develop advanced analytics solutions, production-ready software, research and development and to offer insights into all aspects of the football analytics landscape. Beyond client work, I advocate for open-source sports analytics as a co-founder of PySport, by maintaining the 𝚞𝚗𝚛𝚊𝚟𝚎𝚕𝚜𝚙𝚘𝚛𝚝𝚜 Python package and contributing to 𝚔𝚕𝚘𝚙𝚙𝚢.
         <br><br>
         Browse my portfolio to see my work in action, or get in touch via the options below.
       </p>
