--- a/avondje-nac/index.html
+++ b/avondje-nac/index.html
@@ -12,7 +12,7 @@
         <header>
             <h1>Avondje NAC Stats</h1>
             <p class="subtitle">Onderstaande grafieken tonen de <strong style="color: #E6B611;">Avondje NAC</strong>-prestaties van iedere (voormalig) NAC Breda coach per werkperiode voor de Eredivisie. De prestaties zijn gemeten als het verschil tussen het gerealiseerde en het verwachte doelsaldo, rekening houdend met teamsterkte.</p>
-            <p class="subtitle"><strong style="color: #E6B611;">Bob Maaskant</strong> is de beste <strong style="color: #E6B611;">Avondje NAC</strong>-coach aan de <strong style="color: #FFFFFF;">Beatrixstraat</strong> en <strong style="color: #E6B611;">Carl Hoefkens</strong> is de beste <strong style="color: #E6B611;">Avondje NAC</strong>-coach in het <strong style="color: #FFFFFF;">Rat Verleghtstadion</strong>.</p>
+            <p class="subtitle"><strong style="color: #E6B611;">Bob Maaskant</strong> is de beste <strong style="color: #E6B611;">Avondje NAC</strong>-coach aan de <strong style="color: #FFFFFF;">Beatrixstraat</strong> en <strong style="color: #E6B611;">Carl Hoefkens</strong> is de beste <strong style="color: #E6B611;">Avondje NAC</strong>-coach in het <strong style="color: #FFFFFF;">Rat Verleghstadion</strong>.</p>
             <p class="subtitle" style="text-align: right;">Door: <a href="https://unravelsports.com" target="_blank" style="color: #E6B611; text-decoration: none;">Joris Bekkers</a>. Data: <a href="https://www.clubelo.com" target="_blank" style="color: #757558; text-decoration: none;">www.clubelo.com</a>.</p>
 
             <div class="controls">
@@ -32,6 +32,16 @@
                         <option value="coach">Trainernaam (A-Z)</option>
                         <option value="performance">Gem. Prestatie</option>
                         <option value="games">Aantal Wedstrijden</option>
+                    </select>
+                </div>
+
+                <div class="sort-box">
+                    <label for="dayTypeSelect">Dag type:</label>
+                    <select id="dayTypeSelect" aria-label="Filter dag type">
+                        <option value="avondje_nac">Avondje NAC</option>
+                        <option value="sunday">Zondag</option>
+                        <option value="weekday">Doordeweeks</option>
+                        <option value="pre">Voor het Avondje</option>
                     </select>
                 </div>
 
