--- a/avondje-nac/index.html
+++ b/avondje-nac/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avondje NAC Stats</title>
+    <title>50 Jaar Avondje NAC Stats</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Avondje NAC Stats</h1>
+            <h1>50 Jaar Avondje NAC Stats</h1>
             <p class="subtitle">Onderstaande grafieken tonen de <strong style="color: #E6B611;">Avondje NAC</strong>-prestaties van iedere (voormalig) NAC Breda coach per werkperiode voor de Eredivisie. De prestaties zijn gemeten als het verschil tussen het gerealiseerde en het verwachte doelsaldo, rekening houdend met teamsterkte.</p>
             <p class="subtitle"><strong style="color: #E6B611;">Bob Maaskant</strong> is de beste <strong style="color: #E6B611;">Avondje NAC</strong>-coach aan de <strong style="color: #FFFFFF;">Beatrixstraat</strong> en <strong style="color: #E6B611;">Carl Hoefkens</strong> is de beste <strong style="color: #E6B611;">Avondje NAC</strong>-coach in het <strong style="color: #FFFFFF;">Rat Verleghstadion</strong>.</p>
             <p class="subtitle" style="text-align: right;">Door: <a href="https://unravelsports.com" target="_blank" style="color: #E6B611; text-decoration: none;">Joris Bekkers</a>. Data: <a href="https://www.clubelo.com" target="_blank" style="color: #757558; text-decoration: none;">www.clubelo.com</a>.</p>
