--- a/avondje-nac/index.html
+++ b/avondje-nac/index.html
@@ -8,10 +8,11 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
 <body>
+    
     <div class="container">
         <header>
             <h1>50 Jaar Avondje NAC Stats</h1>
-            <p class="subtitle">Het <strong style="color: #E6B611;">Avondje NAC</strong> bestaat 50 jaar! Om dit te vieren heb ik alle Eredivisie-wedstrijden van <strong style="color: #E6B611;">NAC Breda</strong> sinds begin jaren 60 geanalyseerd om te achterhalen welke coach het beste presteerde tijdens het <strong style="color: #E6B611;">Avondje NAC</strong>.</p>
+            <p class="subtitle">Het <strong style="color: #E6B611;">Avondje NAC</strong> bestaat 50 jaar! Om dit te vieren heb ik alle Eredivisie-thuiswedstrijden van <strong style="color: #E6B611;">NAC Breda</strong> sinds begin jaren 60 geanalyseerd om te achterhalen welke coach het beste presteerde tijdens het <strong style="color: #E6B611;">Avondje NAC</strong>.</p>
 
             <p class="subtitle">Door wedstrijdresultaten te vergelijken met de verwachtingen op basis van teamsterkte, kunnen we zien welke coaches echt het verschil maakten, welke juist tegenvielen, en of hun prestaties vooral op toeval berusten of niet.</p>
             <p class="subtitle">En wat blijkt? <strong style="color: #FFFFFF;">Bob Maaskant</strong> is de beste <strong style="color: #E6B611;">Avondje NAC</strong>-coach aan de <strong style="color: #FFFFFF;">Beatrixstraat</strong> en <strong style="color: #FFFFFF;">Carl Hoefkens</strong> is de beste <strong style="color: #E6B611;">Avondje NAC</strong>-coach in het <strong style="color: #FFFFFF;">Rat Verleghstadion</strong>.</p>
