--- a/avondje-nac/index.html
+++ b/avondje-nac/index.html
@@ -8,7 +8,18 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
 <body>
-    
+    <!-- Header -->
+    <header class="site-header">
+        <div class="header-container">
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../archive.html">All Posts</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
     <div class="container">
         <header>
             <h1>50 Jaar Avondje NAC Stats</h1>
