--- a/avondje-nac/index.html
+++ b/avondje-nac/index.html
@@ -93,6 +93,15 @@
         </main>
     </div>
 
+    <!-- Footer -->
+    <footer class="site-footer">
+        <div class="footer-content">
+            <p class="footer-text">
+                © 2025 UnravelSports | Joris Bekkers
+            </p>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
