--- a/avondje-nac/index.html
+++ b/avondje-nac/index.html
@@ -22,7 +22,10 @@
 
     <div class="container">
         <header>
-            <h1>50 Jaar Avondje NAC Stats</h1>
+            <div class="header-title-wrapper">
+                <h1>50 Jaar Avondje NAC Stats</h1>
+                <img src="img/beatrixstraat-2.png" alt="Beatrixstraat Stadium" class="header-image">
+            </div>
             <p class="subtitle">Het <strong style="color: #E6B611;">Avondje NAC</strong> bestaat 50 jaar! Om dit te vieren heb ik alle Eredivisie-wedstrijden van <strong style="color: #E6B611;">NAC Breda</strong> sinds begin jaren 60 geanalyseerd om te achterhalen welke coach het beste presteerde tijdens het <strong style="color: #E6B611;">Avondje NAC</strong>.</p>
 
             <p class="subtitle">Door wedstrijdresultaten te vergelijken met de verwachtingen op basis van teamsterkte, kunnen we zien welke coaches echt het verschil maakten, welke juist tegenvielen, en of hun prestaties vooral op toeval berusten of niet.</p>
