--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   <meta name="description" content="UnravelSports - Sports Data Analytics Research & Engineering Consultancy. Explore research papers, Python packages, talks, and interactive tools for football analytics.">
   <meta name="author" content="Joris Bekkers">
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SB9D75Z1MR"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-SB9D75Z1MR');
+  </script>
+
+
   <!-- Open Graph / Social Media -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://unravelsports.github.io/">
