--- a/avondje-nac/index.html
+++ b/avondje-nac/index.html
@@ -6,6 +6,17 @@
     <title>50 Jaar Avondje NAC Stats</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SB9D75Z1MR"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-SB9D75Z1MR');
+    </script>
+
 </head>
 <body>
     <!-- Header -->
