--- a/ssac/26/veb.html
+++ b/ssac/26/veb.html
@@ -5,6 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Wide Open Gazes: Quantifying Visual Exploratory Behavior in Soccer">
   <meta name="author" content="Joris Bekkers">
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SB9D75Z1MR"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-SB9D75Z1MR');
+  </script>
+
 
   <title>Wide Open Gazes | UnravelSports</title>
 
