--- a/avondje-nac/index.html
+++ b/avondje-nac/index.html
@@ -37,7 +37,14 @@
                 <h1>50 Jaar Avondje NAC Stats</h1>
                 <img src="img/beatrixstraat-2.png" alt="Beatrixstraat Stadium" class="header-image">
             </div>
-            <p class="subtitle">Het <strong style="color: #E6B611;">Avondje NAC</strong> bestaat 50 jaar! Om dit te vieren heb ik alle <strong style="color: #FFFFFF;">Eredivisie</strong>-wedstrijden van <strong style="color: #E6B611;">NAC Breda</strong> sinds begin jaren 60 geanalyseerd om te achterhalen welke coach het beste presteerde tijdens het <strong style="color: #E6B611;">Avondje NAC</strong>.</p>
+            <br>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/1ahSbS5YlW9LMSbqEGXkxw?utm_source=generator&theme=0" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            
+            <p class="subtitle">
+                <br>
+                Het <strong style="color: #E6B611;">Avondje NAC</strong> bestaat 50 jaar! 
+                Om dit te vieren produceerde <strong style="color: #E6B611;">NAC Breda</strong> de <strong style="color: #FFFFFF;">Parelduikers</strong> podcast. 
+                Voor de eerste aflevering heb ik alle <strong style="color: #FFFFFF;">Eredivisie</strong>-wedstrijden van <strong style="color: #E6B611;">NAC Breda</strong> sinds begin jaren 60 geanalyseerd om te achterhalen welke coach het beste presteerde tijdens het <strong style="color: #E6B611;">Avondje NAC</strong>.</p>
 
             <p class="subtitle">Door wedstrijdresultaten te vergelijken met de verwachtingen op basis van teamsterkte, kunnen we zien welke coaches echt het verschil maakten, welke juist tegenvielen, en of hun prestaties vooral op toeval berusten of niet.</p>
             <p class="subtitle">En wat blijkt? <strong style="color: #FFFFFF;">Bob Maaskant</strong> is de beste <strong style="color: #E6B611;">Avondje NAC</strong>-coach aller tijden (verspreid over twee periodes) en <strong style="color: #FFFFFF;">Carl Hoefkens</strong> is de beste <strong style="color: #E6B611;">Avondje NAC</strong>-coach in het <strong style="color: #FFFFFF;">Rat Verlegh Stadion</strong>.</p>
