--- a/avondje-nac/index.html
+++ b/avondje-nac/index.html
@@ -82,7 +82,8 @@
                     <select id="sortSelect" aria-label="Sorteer periodes">
                         <option value="date">Datum (Chronologisch)</option>
                         <option value="coach">Trainernaam (A-Z)</option>
-                        <option value="performance">Gem. Prestatie</option>
+                        <option value="total_dsp">Totaal DSP</option>
+                        <option value="performance">Gem. DSP</option>
                         <option value="games">Aantal Wedstrijden</option>
                     </select>
                 </div>
