--- a/index.html
+++ b/index.html
@@ -96,6 +96,27 @@
       text-shadow: 0 2px 10px rgba(230, 182, 17, 0.3);
     }
 
+    .hero-text {
+      font-size: 1.25rem;
+      font-weight: 40;
+      margin-bottom: 20px;
+      color: var(--clr-primary);
+      opacity: 0;
+      animation: fadeInUp 0.8s ease-out 0.4s forwards;
+      text-shadow: 0 2px 10px rgba(230, 182, 17, 0.3);
+    }
+
+    .hero-text-link {
+      text-decoration: none;
+      cursor: pointer;
+      transition: all var(--transition-fast);
+    }
+
+    .hero-text-link:hover .hero-text {
+      text-decoration: underline;
+      text-underline-offset: 4px;
+    }
+
     .hero-subtitle {
       font-size: 1.5rem;
       color: var(--clr-highlight);
@@ -394,6 +415,12 @@
       opacity: 0.7;
       font-size: 0.9em;
     }
+
+    .filter-button-img {
+      height: 1.2em;
+      width: auto;
+      vertical-align: middle;
+    }
   </style>
 </head>
 <body>
@@ -403,9 +430,10 @@
       <h1 class="hero-title">UnravelSports</h1>
       <p class="hero-subtitle">Sports Data Analytics Research & Engineering Consultancy</p>
       <p class="hero-description">
-        UnravelSports is an independent sports data analytics consultancy founded by Joris Bekkers, specializing in analytics research, technical consulting, strategic consulting, and software engineering. I have nearly 10 years of experience in cutting-edge football analytics working with on-ball event data, positional tracking data, and skeletal tracking data. I consult for sports organizations, startups, and data providers to develop advanced analytics solutions, production-ready software, research and development and to offer insights into all aspects of the football analytics landscape. Beyond client work, I advocate for open-source sports analytics as a co-founder of PySport, by maintaining the 𝚞𝚗𝚛𝚊𝚟𝚎𝚕𝚜𝚙𝚘𝚛𝚝𝚜 Python package and contributing to 𝚔𝚕𝚘𝚙𝚙𝚢.
+        UnravelSports is an <strong class="hero-text">independent sports data analytics consultancy</strong> founded by Joris Bekkers, specializing in analytics research, technical consulting, strategic consulting, and software engineering. I have nearly <strong class="hero-text">10 years of experience in cutting-edge football analytics </strong>working with on-ball event data, positional tracking data, and skeletal tracking data. 
+        <br><br> I consult for sports organizations, startups, and data providers to develop advanced analytics solutions, production-ready software, research and development and to offer insights into all aspects of the football analytics landscape. Beyond client work, I advocate for open-source sports analytics as a co-founder of PySport, by maintaining the 𝚞𝚗𝚛𝚊𝚟𝚎𝚕𝚜𝚙𝚘𝚛𝚝𝚜 Python package and contributing to 𝚔𝚕𝚘𝚙𝚙𝚢.
         <br><br>
-        Browse my portfolio to see my work in action, or get in touch via the options below.
+        <a href="#main-content" class="hero-text-link" onclick="document.getElementById('main-content').scrollIntoView({behavior: 'smooth', block: 'start'}); return false;"><strong class="hero-text">Browse my portfolio</strong></a> to see my work in action, or get in touch via the options below.
       </p>
       <div class="hero-social">
         <a href="https://www.linkedin.com/in/joris-bekkers-33138288/" target="_blank" rel="noopener" class="social-link" title="LinkedIn">
@@ -431,7 +459,7 @@
   </section>
 
   <!-- Main Content -->
-  <main class="main-content">
+  <main id="main-content" class="main-content">
     <!-- Filter Buttons -->
     <div class="filter-buttons" id="filter-buttons">
       <!-- Dynamically generated -->
@@ -569,11 +597,19 @@
         const button = document.createElement('button');
         button.className = 'filter-button';
         button.setAttribute('data-filter', categoryKey);
-        button.innerHTML = `
-          <span>${data.emoji}</span>
-          <span>${data.name}</span>
-          <span class="filter-count">(${data.count})</span>
-        `;
+
+        if (categoryKey === 'package') {
+          button.innerHTML = `
+            <img src="imgs/unravelsports-5500x800.png" alt="unravelsports" class="filter-button-img">
+            <span class="filter-count">(${data.count})</span>
+          `;
+        } else {
+          button.innerHTML = `
+            <span>${data.emoji}</span>
+            <span>${data.name}</span>
+            <span class="filter-count">(${data.count})</span>
+          `;
+        }
         button.onclick = () => filterPosts(categoryKey);
         container.appendChild(button);
       });
@@ -601,7 +637,7 @@
     // Initialize on page load
     document.addEventListener('DOMContentLoaded', () => {
       setupFilters();
-      buildFilteredCarousel('all');
+      filterPosts('featured');
     });
   </script>
 </body>
